[gd_scene load_steps=12 format=3 uid="uid://cuhwq72s200rd"]

[ext_resource type="StyleBox" uid="uid://c6tnw3ngpmhrt" path="res://GUI/Themes/level_panel_base_theme.tres" id="1_icnp7"]
[ext_resource type="Theme" uid="uid://ceqslen8rfbmx" path="res://GUI/Themes/UITheme.tres" id="2_h870c"]
[ext_resource type="Script" path="res://GUI/level_selecet_icon.gd" id="2_sw7p6"]
[ext_resource type="Texture2D" uid="uid://baidih1d7gv5x" path="res://Sprites/TileSets/level_icons.png" id="3_wc0u6"]
[ext_resource type="Texture2D" uid="uid://c7rsbqrx0p6o6" path="res://Sprites/TileSets/Lock.png" id="4_ms21h"]
[ext_resource type="PackedScene" uid="uid://cmjnf2ejdfd1w" path="res://GUI/LevelIconStateMachine.tscn" id="6_ww2ww"]
[ext_resource type="Script" path="res://GUI/IconBaseState.gd" id="7_svchx"]
[ext_resource type="Script" path="res://GUI/IconClickedState.gd" id="8_2v5wq"]

[sub_resource type="Animation" id="Animation_bi7r0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(76, 76)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lock:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lock:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LockedIcon:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Lock:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_srh8w"]
resource_name = "Unlock"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lock:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lock:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(-2, 2, 0.5, -2),
"update": 0,
"values": [Vector2(76, 76), Vector2(76, 68), Vector2(76, 94), Vector2(76, 68)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lock:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.0145786),
"update": 0,
"values": [0.0, 0.0, -0.607375]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Lock:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LockedIcon:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8g4ob"]
_data = {
"RESET": SubResource("Animation_bi7r0"),
"Unlock": SubResource("Animation_srh8w")
}

[node name="LevelSelectIcon" type="Control"]
layout_mode = 3
anchor_right = 0.234
anchor_bottom = 0.417
offset_right = 2.23999
offset_bottom = -0.12001
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("2_sw7p6")
icon_tooltip_text = "based"

[node name="LevelIcon" type="Panel" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 152.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("1_icnp7")

[node name="Icon" type="Sprite2D" parent="LevelIcon"]
visible = false
position = Vector2(76, 76)
scale = Vector2(2, 2.125)
texture = ExtResource("3_wc0u6")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="LockedIcon" type="Sprite2D" parent="LevelIcon"]
position = Vector2(76, 76)
scale = Vector2(2, 2.125)
texture = ExtResource("3_wc0u6")
region_enabled = true
region_rect = Rect2(0, 80, 64, 64)

[node name="Lock" type="Sprite2D" parent="LevelIcon"]
position = Vector2(76, 76)
scale = Vector2(1.75, 1.75)
texture = ExtResource("4_ms21h")
hframes = 3

[node name="Label" type="Label" parent="LevelIcon"]
layout_mode = 0
offset_left = 8.0
offset_right = 72.0
offset_bottom = 23.0
theme = ExtResource("2_h870c")
theme_override_colors/font_color = Color(0.878431, 0.643137, 0.431373, 1)
theme_override_font_sizes/font_size = 20
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelIcon"]
libraries = {
"": SubResource("AnimationLibrary_8g4ob")
}

[node name="LevelIconStateMachine" parent="LevelIcon" node_paths=PackedStringArray("initial_state") instance=ExtResource("6_ww2ww")]
initial_state = NodePath("IconBaseState")

[node name="IconBaseState" type="Node" parent="LevelIcon/LevelIconStateMachine"]
script = ExtResource("7_svchx")

[node name="IconClickedState" type="Node" parent="LevelIcon/LevelIconStateMachine"]
script = ExtResource("8_2v5wq")
state = 1
